--- a/sample/index.html
+++ b/sample/index.html
@@ -33,7 +33,7 @@
 				<div class="row row-editor">
 					<div class="editor-container">
 						<div class="editor">
-							
+							<strong>asdasd</strong>
 						</div>
 					</div>
 				</div></div>
