--- a/sample/index.html
+++ b/sample/index.html
@@ -54,20 +54,87 @@
 		</p>
 	</footer>
 	<script src="../build/ckeditor.js"></script>
-	<script>ClassicEditor
+	<script>
+
+		// Filtering function - it uses `name` and `username` properties of an item to find a match.
+		function isItemMatching(item, queryText) {
+			// Make the search case-insensitive.
+			const searchString = queryText.toLowerCase();
+
+			// Include an item in the search results if name or username includes the current user input.
+			return (
+				item.name.toLowerCase().includes(searchString) ||
+				item.id.toLowerCase().includes(searchString)
+			);
+		}
+
+		const items = [
+			{ id: '@swarley', userId: '1', name: 'Barney Stinson', link: 'https://www.imdb.com/title/tt0460649/characters/nm0000439' },
+			{ id: '@lilypad', userId: '2', name: 'Lily Aldrin', link: 'https://www.imdb.com/title/tt0460649/characters/nm0004989' },
+			{ id: '@marry', userId: '3', name: 'Marry Ann Lewis', link: 'https://www.imdb.com/title/tt0460649/characters/nm1130627' },
+			{ id: '@marshmallow', userId: '4', name: 'Marshall Eriksen', link: 'https://www.imdb.com/title/tt0460649/characters/nm0781981' },
+			{ id: '@rsparkles', userId: '5', name: 'Robin Scherbatsky', link: 'https://www.imdb.com/title/tt0460649/characters/nm1130627' },
+			{ id: '@tdog', userId: '6', name: 'Ted Mosby', link: 'https://www.imdb.com/title/tt0460649/characters/nm1102140' }
+		];
+
+		function getFeedItems(queryText) {
+			// As an example of an asynchronous action, return a promise
+			// that resolves after a 100ms timeout.
+			// This can be a server request or any sort of delayed action.
+			return new Promise(resolve => {
+				setTimeout(() => {
+					const itemsToDisplay = items
+						// Filter out the full list of all items to only those matching the query text.
+						.filter(item => isItemMatching(item, queryText))
+						// Return 10 items max - needed for generic queries when the list may contain hundreds of elements.
+						.slice(0, 10);
+
+					resolve(itemsToDisplay);
+				}, 100);
+			});
+		}
+
+		function customItemRenderer(item) {
+			const itemElement = document.createElement('span');
+
+			itemElement.classList.add('custom-item');
+			itemElement.id = `mention-list-item-id-${item.userId}`;
+			itemElement.textContent = `${item.name} `;
+
+			const usernameElement = document.createElement('span');
+
+			usernameElement.classList.add('custom-item-username');
+			usernameElement.textContent = item.id;
+
+			itemElement.appendChild(usernameElement);
+
+			return itemElement;
+		}
+
+
+		ClassicEditor
 			.create(document.querySelector('.editor'), {
 
 				licenseKey: '',
 
+				// onChange: (event, editor) => {
+				// 	const data = editor.getData();
+				// 	console.log("onChange...", { event, editor, data });
+				// }
 
-
+				mention: {
+					dropdownLimit: 4,
+					feeds: [
+						{
+							marker: '@',
+							feed: getFeedItems,
+							itemRenderer: customItemRenderer
+						},
+					]
+				},
 			})
 			.then(editor => {
 				window.editor = editor;
-
-
-
-
 			})
 			.catch(error => {
 				console.error('Oops, something went wrong!');
@@ -75,6 +142,12 @@
 				console.warn('Build id: 3jc6ymj9ma6z-5kg9djlyr62b');
 				console.error(error);
 			});
+	</script>
+
+	<script>
+		document.querySelector("wiki").addEventListener("click", (e) => {
+			console.log(e.target.getAttribute("href"));
+		})
 	</script>
 </body>
 
