--- a/sample/index.html
+++ b/sample/index.html
@@ -56,6 +56,116 @@
 	<script src="../build/ckeditor.js"></script>
 	<script>
 
+		class MyUploadAdapter {
+			constructor(loader) {
+				// The file loader instance to use during the upload.
+				this.loader = loader;
+				console.log("my upload....");
+			}
+
+			// Initializes the XMLHttpRequest object using the URL passed to the constructor.
+			_initRequest() {
+				const xhr = this.xhr = new XMLHttpRequest();
+
+				// Note that your request may look different. It is up to you and your editor
+				// integration to choose the right communication channel. This example uses
+				// a POST request with JSON as a data structure but your configuration
+				// could be different.
+				xhr.open('POST', 'http://example.com/image/upload/path', true);
+				xhr.responseType = 'json';
+			}
+
+			// Initializes XMLHttpRequest listeners.
+			_initListeners(resolve, reject, file) {
+				const xhr = this.xhr;
+				const loader = this.loader;
+				const genericErrorText = `Couldn't upload file: ${file.name}.`;
+
+				xhr.addEventListener('error', () => {
+					console.log("errrrrrrr")
+					resolve({
+						default: "https://www.youtube.com/watch?v=5QtHtDkHT5Y"
+					})
+					// reject(genericErrorText)
+				});
+				xhr.addEventListener('abort', () => {
+					console.log("aborrrrrrrrt")
+					reject()
+				});
+				xhr.addEventListener('load', () => {
+					const response = xhr.response;
+
+					console.log("loaddddddddd")
+					// This example assumes the XHR server's "response" object will come with
+					// an "error" which has its own "message" that can be passed to reject()
+					// in the upload promise.
+					//
+					// Your integration may handle upload errors in a different way so make sure
+					// it is done properly. The reject() function must be called when the upload fails.
+					if (!response || response.error) {
+						return reject(response && response.error ? response.error.message : genericErrorText);
+					}
+
+					// If the upload is successful, resolve the upload promise with an object containing
+					// at least the "default" URL, pointing to the image on the server.
+					// This URL will be used to display the image in the content. Learn more in the
+					// UploadAdapter#upload documentation.
+					resolve({
+						// default: response.url
+						default: "https://www.youtube.com/watch?v=5QtHtDkHT5Y"
+					});
+				});
+
+				// Upload progress when it is supported. The file loader has the #uploadTotal and #uploaded
+				// properties which are used e.g. to display the upload progress bar in the editor
+				// user interface.
+				// if (xhr.upload) {
+				// 	xhr.upload.addEventListener('progress', evt => {
+				// 		if (evt.lengthComputable) {
+				// 			loader.uploadTotal = evt.total;
+				// 			loader.uploaded = evt.loaded;
+				// 		}
+				// 	});
+				// }
+			}
+
+			// Prepares the data and sends the request.
+			_sendRequest(file) {
+				// Prepare the form data.
+				const data = new FormData();
+
+				data.append('upload', file);
+
+				console.log("senddddddd", data)
+
+				// Important note: This is the right place to implement security mechanisms
+				// like authentication and CSRF protection. For instance, you can use
+				// XMLHttpRequest.setRequestHeader() to set the request headers containing
+				// the CSRF token generated earlier by your application.
+
+				// Send the request.
+				this.xhr.send(data);
+			}
+
+			// Starts the upload process.
+			upload() {
+				return this.loader.file
+					.then(file => new Promise((resolve, reject) => {
+						this._initRequest();
+						this._initListeners(resolve, reject, file);
+						this._sendRequest(file);
+					}));
+			}
+
+			// Aborts the upload process.
+			abort() {
+				// Reject the promise returned from the upload() method.
+				if (this.xhr) {
+					this.xhr.abort();
+				}
+			}
+		}
+
 		// Filtering function - it uses `name` and `username` properties of an item to find a match.
 		function isItemMatching(item, queryText) {
 			// Make the search case-insensitive.
@@ -68,12 +178,12 @@
 		}
 
 		const items = [
-			{ id: '@swarley', userId: '1', name: 'Barney Stinson', link: 'https://www.imdb.com/title/tt0460649/characters/nm0000439' },
-			{ id: '@lilypad', userId: '2', name: 'Lily Aldrin', link: 'https://www.imdb.com/title/tt0460649/characters/nm0004989' },
-			{ id: '@marry', userId: '3', name: 'Marry Ann Lewis', link: 'https://www.imdb.com/title/tt0460649/characters/nm1130627' },
-			{ id: '@marshmallow', userId: '4', name: 'Marshall Eriksen', link: 'https://www.imdb.com/title/tt0460649/characters/nm0781981' },
-			{ id: '@rsparkles', userId: '5', name: 'Robin Scherbatsky', link: 'https://www.imdb.com/title/tt0460649/characters/nm1130627' },
-			{ id: '@tdog', userId: '6', name: 'Ted Mosby', link: 'https://www.imdb.com/title/tt0460649/characters/nm1102140' }
+			{ id: '#swarley', userId: '1', name: 'Barney Stinson', link: 'https://www.imdb.com/title/tt0460649/characters/nm0000439' },
+			{ id: '#lilypad', userId: '2', name: 'Lily Aldrin', link: 'https://www.imdb.com/title/tt0460649/characters/nm0004989' },
+			{ id: '#marry', userId: '3', name: 'Marry Ann Lewis', link: 'https://www.imdb.com/title/tt0460649/characters/nm1130627' },
+			{ id: '#marshmallow', userId: '4', name: 'Marshall Eriksen', link: 'https://www.imdb.com/title/tt0460649/characters/nm0781981' },
+			{ id: '#rsparkles', userId: '5', name: 'Robin Scherbatsky', link: 'https://www.imdb.com/title/tt0460649/characters/nm1130627' },
+			{ id: '#tdog', userId: '6', name: 'Ted Mosby', link: 'https://www.imdb.com/title/tt0460649/characters/nm1102140' }
 		];
 
 		function getFeedItems(queryText, list) {
@@ -98,9 +208,9 @@
 			// that resolves after a 100ms timeout.
 			// This can be a server request or any sort of delayed action.
 			return new Promise((resolve) => {
-				
+
 				setTimeout(() => {
-					const wikiItems = [{"articleId":1,"articleName":"第一篇空间","spaceId":1,"articleType":2},{"articleId":2,"articleName":"规章制度空间","spaceId":2,"articleType":2},{"articleId":3,"articleName":"农运无口车","spaceId":1,"articleType":1},{"articleId":4,"articleName":"整先些府油","spaceId":1,"articleType":1},{"articleId":5,"articleName":"办历现干就角","spaceId":1,"articleType":1},{"articleId":6,"articleName":"区及部面美","spaceId":1,"articleType":1},{"articleId":7,"articleName":"行史花先大七","spaceId":1,"articleType":1},{"articleId":9,"articleName":"亲育又走时格","spaceId":1,"articleType":1},{"articleId":10,"articleName":"亲育又走时格","spaceId":1,"articleType":1},{"articleId":11,"articleName":"离以太和","spaceId":1,"articleType":1}];
+					const wikiItems = [{ "articleId": 1, "articleName": "第一篇空间", "spaceId": 1, "articleType": 2 }, { "articleId": 2, "articleName": "规章制度空间", "spaceId": 2, "articleType": 2 }, { "articleId": 3, "articleName": "农运无口车", "spaceId": 1, "articleType": 1 }, { "articleId": 4, "articleName": "整先些府油", "spaceId": 1, "articleType": 1 }, { "articleId": 5, "articleName": "办历现干就角", "spaceId": 1, "articleType": 1 }, { "articleId": 6, "articleName": "区及部面美", "spaceId": 1, "articleType": 1 }, { "articleId": 7, "articleName": "行史花先大七", "spaceId": 1, "articleType": 1 }, { "articleId": 9, "articleName": "亲育又走时格", "spaceId": 1, "articleType": 1 }, { "articleId": 10, "articleName": "亲育又走时格", "spaceId": 1, "articleType": 1 }, { "articleId": 11, "articleName": "离以太和", "spaceId": 1, "articleType": 1 }];
 
 					if (queryText.startsWith("\[\[")) {
 						queryText = queryText.slice(2)
@@ -153,7 +263,7 @@
 					dropdownLimit: 4,
 					feeds: [
 						{
-							marker: '@',
+							marker: '#',
 							feed: (text) => getFeedItems(text, items),
 							itemRenderer: customItemRenderer
 						},
@@ -168,9 +278,23 @@
 						}
 					]
 				},
+
+				// mediaEmbed: {
+				// 	providers: [
+				// 		{
+				// 			name: 'allow-all',
+				// 			url: /^.+/
+				// 		}
+				// 	]
+				// }
 			})
 			.then(editor => {
 				window.editor = editor;
+				console.log(12312312312312312, editor.plugins.get('FileRepository'))
+
+				editor.plugins.get('FileRepository').createUploadAdapter = (loader) => {
+					return new MyUploadAdapter(loader);
+				};
 			})
 			.catch(error => {
 				console.error('Oops, something went wrong!');
@@ -183,10 +307,10 @@
 	<script>
 		document.getElementById("editor").addEventListener("click", (e) => {
 
-			console.log(1111111, e.target, e.currentTarget);
-			const { 
+			// console.log(1111111, e.target, e.currentTarget);
+			const {
 				// wiki
-				wiki, id,  spaceid, origin, type,
+				wiki, id, spaceid, origin, type,
 				// 标签
 				mention
 			} = e.target.dataset || {};
@@ -203,7 +327,7 @@
 			} else if (e.target.classList.contains("mention")) {
 				console.log("mention....", mention)
 			}
-			
+
 		})
 	</script>
 </body>
